# cldr-viewer

./: .gitignore  CHANGELOG.md  README.md  po4a.cfg  pyproject.toml
.github/workflows/: build-rpm.yml  release.yml  rpm-build.yml
.tx/: config
build-new/cldr-viewer_0.1.2_all/DEBIAN/: control
build-new/cldr-viewer_0.2.1_all/DEBIAN/: control
build-new/cldr-viewer_0.2.1_all/usr/lib/python3/dist-packages/cldr_viewer/: __init__.py
data/: se.danielnylander.cldr-viewer.desktop  se.danielnylander.cldr-viewer.desktop.in
data/man/: cldr-viewer.1
po/: README.md  cldr-viewer.pot  sv.mo  sv.po
po/man/: cldr-viewer.1.pot  sv.po
po/sv/LC_MESSAGES/: cldr-viewer.mo
rpm-build/cldr-viewer_0.2.1/usr/lib/python3/dist-packages/cldr_viewer/: cldr_data.py
src/cldr_viewer/: __init__.py  main.py
